# cvs-ipv6

./: BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  TESTS  TODO  acconfig.h  aclocal.m4  config.h.in  config.status  configure  configure.in  cvs.spec.in  cvsnt.dep  cvsnt.dsp  cvsnt.mak
contrib/: .cvsignore  ChangeLog  Makefile.in  check_cvs.in  cvs_acls.in  pvcs2rcs  pvcs2rcs.in  sccs2rcs
diff/: ChangeLog  diff.c  diff3.c  libdiff.mak  system.h  util.c
doc/: ChangeLog  Makefile.am  Makefile.in  cvs.1  cvs.texinfo  cvsclient.texi  mkman  stamp-1  stamp-vti  version-client.texi  version.texi
emx/: ChangeLog  Makefile.in  filesubr.c
lib/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  ftruncate.c  getaddrinfo.c  getnameinfo.c  getpass.c  libcvs.mak  mkdir.c  regex.c  rename.c  system.h
man/: ChangeLog  Makefile.in  cvs.1
os2/: ChangeLog  Makefile.in  filesubr.c  run.c
src/: ChangeLog  Makefile.am  Makefile.in  add.c  admin.c  annotate.c  buffer.c  checkin.c  checkout.c  client.c  commit.c  create_adm.c  cvs.h  cvsbug  cvsrc.c  diff.c  edit.c  entries.c  error.c  fileattr.c  filesubr.c  hardlink.c  history.c  ignore.c  import.c  lock.c  log.c  login.c  logmsg.c  main.c  mkmodules.c  modules.c  myndbm.c  no_diff.c  parseinfo.c  patch.c  rcs.c  rcs.h  rcscmds.c  recurse.c  (+15 more)
tools/: Makefile.in
vms/: ChangeLog  Makefile.am  Makefile.in  config.h  config.h.in  filesubr.c  vms.h
windows-NT/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  config.h  config.h.in  filesubr.c  mkdir.c  ndir.c  pwd.c  rcmd.c  run.c  stamp-ch  startserver.c  woe32.c
windows-NT/SCC/: ChangeLog  Makefile.in  SCC.mak
zlib/: .cvsignore  ChangeLog  libz.mak  minigzip.c
